--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1998-03-09  Shuhei KOBAYASHI  <shuhei-k@jaist.ac.jp>
+
+	* README.en (Bug reports): Modify description of tm mailing list.
+
 1997-03-19  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
 
 	* MU: Version 0.40.2 was released.
