--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1998-07-14  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
+
+	* mu-cite.el (detect-paragraph-cited-prefix): Use `cadr' instead
+	of `second'.
+
 1998-03-09  Shuhei KOBAYASHI  <shuhei-k@jaist.ac.jp>
 
 	* README.en (Bug reports): Modify description of tm mailing list.
