--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-07-15  MORIOKA Tomohiko  <tomo@m17n.org>
+
+	* MU-CFG: Remove RCS magic cookie.
+
 1999-07-15  Masahiro Murata   <muse@ba2.so-net.ne.jp>
 
 	* mu-cite.el (mu-cite/eval-format): Add `save-excursion'.
