--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-07-15  MORIOKA Tomohiko  <tomo@m17n.org>
 
+	* MU-MK: Remove RCS magic cookie.
+
 	* MU-CFG: Remove RCS magic cookie.
 
 1999-07-15  Masahiro Murata   <muse@ba2.so-net.ne.jp>
