--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 1999-07-20  MORIOKA Tomohiko  <tomo@m17n.org>
 
+	* mu-bbdb.el (mu-bbdb-load-hook): Deleted the definition as
+	variable.
+
+1999-07-20  MORIOKA Tomohiko  <tomo@m17n.org>
+
 	* mu-cite.el (string-compare-from-top): Revert to use `sref'
 	instead of `aref'; use `char-next-index'.
 
